--- a/components/Sponsors/sponsors.module.scss
+++ b/components/Sponsors/sponsors.module.scss
@@ -108,7 +108,8 @@
       flex-direction: column;
       height: calc(100% - 170px);
       width: 1500px;
-      max-width: 100%;
+      max-width: 85%;
+
       align-items: center;
       justify-items: center;
       gap: 50px;
@@ -130,6 +131,8 @@
 
       @media screen and (max-width: 768px) {
         height: calc(100% - 140px);
+        max-width: 100%;
+
       }
       @media screen and (max-width: 450px) {
         height: calc(100% - 115px);
